--- a/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj
+++ b/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <ClCompile Include="Erreur.cpp" />
     <ClCompile Include="GElement.cpp" />
+    <ClCompile Include="LectureGPR.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
