--- a/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj.filters
+++ b/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClCompile Include="GElement.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="LectureGPR.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
