--- a/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj
+++ b/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj
@@ -69,12 +69,14 @@
     <ClInclude Include="GElement.h" />
     <ClInclude Include="Graphe.h" />
     <ClInclude Include="Sommet.h" />
+    <ClInclude Include="Vecteur2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Erreur.cpp" />
     <ClCompile Include="GElement.cpp" />
     <ClCompile Include="LectureGPR.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Vecteur2D.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
