--- a/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj.filters
+++ b/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM/HG_VS_LR_L3_ROM.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Erreur.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Vecteur2D.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Erreur.cpp">
@@ -42,6 +45,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="LectureGPR.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Vecteur2D.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
